--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "编辑器核心库",
   "main": "lib/index.js",
   "module": "lib/index.js",
+  "types": "types/index.d.ts",
+  "typings": "types/index.d.ts",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
@@ -12,6 +14,7 @@
   },
   "files": [
     "lib",
+    "types",
     "package.json",
     "README.md"
   ],
